Dark theme added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
   <h1>Online Order</h1>
   <div id="top-bar">
+    <button onclick="toggleTheme()">🌓 Toggle Theme</button>
     <button onclick="openProductModal()">➕ Add Product</button>
 
     <!-- Geçmiş Siparişler Butonu -->
